--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "jest tests"
+    "test": "jest --coverage",
+    "coverage": "jest --coverage --watchAll --collectCoverageFrom='src/**/*.{ts,tsx}'"
   },
   "dependencies": {
     "axios": "^1.5.0",
@@ -38,6 +39,7 @@
     "jest": "^29.7.0",
     "jest-dom": "^4.0.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-svg-transformer": "^1.0.0",
     "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1",
