package json updated

--- a/e2e/package.json
+++ b/e2e/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "npx playwright test",
-    "test-ui": "npx playwright test --ui"
+    "ui": "npx playwright test --ui"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@playwright/test": "^1.37.1",
     "@types/node": "^20.6.1"
   }
 }
